# superpixels

./: .gitignore  LICENSE  README.md  environment.yml  prepare_dataset.py  pyproject.toml
examples/: interactive_spp.py  spp_segmentation.py
notebooks/: demo.ipynb  demo_spp_and_gt.ipynb  diy_interactive_segmentation.ipynb  inference.ipynb  interactive_spp_v2.ipynb  interactive_spp_v2.py  kyle_scratch.ipynb  load_gt.ipynb  load_gt_stats.ipynb  setup.ipynb  superpixel2embedding.ipynb  superpixel_stats.py  train.ipynb
src/cellcanvas_spp/: data.py  eval.py  features.py  ground_truth.py  segmentation.py
src/cellcanvas_spp/_test/: test_data.py  test_eval.py
